# openbot-rs

./: .gitignore  Cargo.toml
mc-protocol/: Cargo.toml
openbot-cli/: .gitignore  Cargo.toml
openbot-cli/src/: config.rs  main.rs  tui.rs
