[package]
name = "openbot-cli"
version = "0.1.0"
edition = "2024"
description = "Open-source, easy-to-use and async Minecraft robot manager"
license = "GPL-3.0 only"
readme = "README.md"
[dependencies]
# 日志部分 tracing
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3" , features = ["env-filter", "fmt", "json"]}

# 异步运行时
tokio = { version = "1.48", features = ["full"]}

# 时间
chrono = "0.4.42"

# 序列化
serde = { version = "1.0.2", features = ["derive"]}
serde_yaml = "0.9.3"

# 命令行
ratatui = "0.29"
crossterm = "0.29"
ansi-to-tui = "7.0.0"
# 杂项
anyhow = "1.0"
once_cell = "1.19.0"
